--- a/exer-css/include-media/package.json
+++ b/exer-css/include-media/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"hoek": "^5.0.3",
 		"include-media": "^1.4.9",
 		"node-sass": "^4.9.2"
 	}
