--- a/material-design/installation/using-mdc-web-with-es6-sass/package.json
+++ b/material-design/installation/using-mdc-web-with-es6-sass/package.json
@@ -19,7 +19,8 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "extract-loader": "^2.0.1",
-    "file-loader": "^1.1.11",
+	"file-loader": "^1.1.11",
+	"hoek": "^5.0.3",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.1.0",
